          CHANGES IN SOUNDGEN VERSION 1.8.2.9000 [...date...]
MINOR:
  * spectrogram(), analyze(), analyzeFolder(): a new argument "extraContour" for plotting something over the spectrogram
  * spectrogram(): new arguments "from" and "to" for plotting a part of a long sound


          CHANGES IN SOUNDGEN VERSION 1.8.2 [17-October-2020]
NEW FUNCTIONS:
  * addAM(): adds amplitude modulation to a sound

MINOR:
  * soundgen(): new argument "amType" for sinusoidal or logistic amplitude modulation
  * soundgen(): "addSilence" can be of length 2 to add different amounts of silence before/after the synthesized sound
  * pitch_app(): the "voice" button forces selection to be treated as voiced if any candidates are available (before its function was merely to undo "unvoice")
  * pitch_app(): faster updates when adding/removing anchors (path updated only for current syllable) and when setting a new prior (analyze() is not re-run)
  * pitch_app(): a single manual pitch anchor is still interpreted as a new syllable
  * analyze(), pitch_app(): interpolation uses loess instead of medians
  * pitch_app(), formant_app(): either "step" or "overlap" can be used to control windowing
  * analyze(), analyzeFolder(): silence threshold is adjusted to max amplitude of input, so very quiet audio can still be treated as voiced

BUGS FIXED:
  * formant_app(): doesn't crash when appending annotations
  * pitch_app(), formant_app(): fixed incompletely plotted oscillogram


          CHANGES IN SOUNDGEN VERSION 1.8.1 [18-September-2020]
MINOR
  * soundgen(), getSpectralEnvelope(): a more consisent implementation of zero-pole models, which affects manually specified formant amplitudes. Check your old code!
  * soundgen(), getSpectralEnvelope(): formantDepStoch is now treated as a multiplication factor instead of dB (0 = no formant, 1 = default amplitude). Check your old code!
  * soundgen(): updated list of tempEffects